--- a/ClassLibrary_fot_DB/App.config
+++ b/ClassLibrary_fot_DB/App.config
@@ -10,7 +10,7 @@
     </providers>
   </entityFramework>
 	<connectionStrings>
-		<add name="English2" connectionString="Server = NADI\SQLEXPRESS; Database = English_for_kids2; Trusted_Connection = True;" providerName="System.Data.SqlClient" />
+		<add name="English" connectionString="Server = NADI\SQLEXPRESS; Database = English_for_kids; Trusted_Connection = True;" providerName="System.Data.SqlClient" />
 	</connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
