--- a/ClassLibrary_fot_DB/ClassLibrary_fot_DB.csproj
+++ b/ClassLibrary_fot_DB/ClassLibrary_fot_DB.csproj
@@ -169,13 +169,19 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Answer.cs" />
+    <Compile Include="Answer_mas.cs" />
+    <Compile Include="Category.cs" />
     <Compile Include="Data_Layer_folder\Data_Layer_model.cs" />
     <Compile Include="EnglishDbContext.cs" />
+    <Compile Include="Models\Answer_mas_model.cs" />
     <Compile Include="Models\Answer_model.cs" />
+    <Compile Include="Models\Category_model.cs" />
     <Compile Include="Models\Question_model.cs" />
+    <Compile Include="Models\Type_model.cs" />
     <Compile Include="Models\User_model.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Question.cs" />
+    <Compile Include="Type_.cs" />
     <Compile Include="User.cs" />
   </ItemGroup>
   <ItemGroup>
